Fix bug where rule engine asset states weren't updated when asset was modified (#852)